force-app/main/default/objects/Annual_Review__c/fields/Property_maintenance_details__c.field-meta.xml
<CustomField>
    <fullName>Property_maintenance_details__c</fullName>
    <description>Question: Please provide additional details</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Property maintenance details</label>
    <type>TextArea</type>
</CustomField>