force-app/main/default/objects/Annual_Review__c/fields/Property_renovated__c.field-meta.xml
<CustomField>
    <fullName>Property_renovated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: Over the past 12 months I / we have not modified or renovated the Property except as permitted under clause 10.7 of the Participation Agreement.</description>
    <label>Property renovated</label>
    <type>Checkbox</type>
</CustomField>