force-app/main/default/objects/Annual_Review__c/fields/Property_vacated_for_more_than_3_months__c.field-meta.xml
<CustomField>
    <fullName>Property_vacated_for_more_than_3_months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property vacated for more than 3 months</label>
    <type>Checkbox</type>
</CustomField>