force-app/main/default/objects/Annual_Review__c/fields/Received_Consent_for_absence_2__c.field-meta.xml
<CustomField>
    <fullName>Received_Consent_for_absence_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Absence #2 Consent to vacate</label>
    <type>Checkbox</type>
</CustomField>