force-app/main/default/objects/Annual_Review__c/fields/Received_Consent_for_absence__c.field-meta.xml
<CustomField>
    <fullName>Received_Consent_for_absence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received Consent for absence</label>
    <type>Checkbox</type>
</CustomField>