force-app/main/default/objects/Annual_Review__c/fields/Received_consent_for_land_acquired__c.field-meta.xml
<CustomField>
    <fullName>Received_consent_for_land_acquired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received consent for land acquired</label>
    <type>Checkbox</type>
</CustomField>