force-app/main/default/objects/Annual_Review__c/fields/Received_consent_to_provide_security_int__c.field-meta.xml
<CustomField>
    <fullName>Received_consent_to_provide_security_int__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: Did you obtain written consent from the Homebuyer Fund Team to provide the security interest?</description>
    <label>Received consent to provide security int</label>
    <type>Checkbox</type>
</CustomField>