force-app/main/default/objects/Annual_Review__c/fields/Refinance_details__c.field-meta.xml
<CustomField>
    <fullName>Refinance_details__c</fullName>
    <description>Question: Please provide information and relevant supporting information in relation to the refinancing of the Loan Agreement for the Property.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Refinance details</label>
    <type>TextArea</type>
</CustomField>