force-app/main/default/objects/Annual_Review__c/fields/Refinanced_with_same_PF__c.field-meta.xml
<CustomField>
    <fullName>Refinanced_with_same_PF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: Have you refinanced with the same Panel Financier?</description>
    <label>Refinanced with same PF</label>
    <type>Checkbox</type>
</CustomField>