force-app/main/default/objects/Annual_Review__c/fields/Renovation_cost__c.field-meta.xml
<CustomField>
    <fullName>Renovation_cost__c</fullName>
    <label>Renovation cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>