force-app/main/default/objects/Annual_Review__c/fields/Renovation_costed_more_than_10000__c.field-meta.xml
<CustomField>
    <fullName>Renovation_costed_more_than_10000__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renovation costed more than 10000</label>
    <type>Checkbox</type>
</CustomField>