force-app/main/default/objects/Annual_Review__c/fields/Renovation_details__c.field-meta.xml
<CustomField>
    <fullName>Renovation_details__c</fullName>
    <description>Question: Details of the renovation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Renovation details</label>
    <type>TextArea</type>
</CustomField>