force-app/main/default/objects/Annual_Review__c/fields/Review_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Review_Updated_Time__c</fullName>
    <description>The time when an annual review was updated by the primary participant, from which 14 days occur before a reminder is sent to secondary participants to re-verify</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Updated Time</label>
    <type>DateTime</type>
</CustomField>