force-app/main/default/objects/Annual_Review__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <description>This field is used to track when a Major or Minor Update event occurs within an Annual Review</description>
    <label>Revision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minor Update Requested</fullName>
            </value>
            <value>
                <fullName>Minor Update Complete</fullName>
            </value>
            <value>
                <fullName>Major Update Requested</fullName>
            </value>
            <value>
                <fullName>Major Update Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>