force-app/main/default/objects/Annual_Review__c/fields/Schedule_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as a condition in scheduled path configuration of Annual Review Reminder Notifications flow</description>
    <label>Schedule Reminder</label>
    <type>Checkbox</type>
</CustomField>