force-app/main/default/objects/Annual_Review__c/fields/Verification_Request_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Verification_Request_DateTime__c</fullName>
    <description>DateTime that the Annual Review was submitted by Primary Participant and request made to secondary participants to verify.  Used as a reference point to schedule follow up reminders to to the secondary participants</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification Request DateTime</label>
    <type>DateTime</type>
</CustomField>