force-app/main/default/objects/Annual_Review__c/fields/Windfall_gain_amount__c.field-meta.xml
<CustomField>
    <fullName>Windfall_gain_amount__c</fullName>
    <label>Windfall gain amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>