force-app/main/default/objects/Annual_Review__c/fields/Windfall_gain_payment__c.field-meta.xml
<CustomField>
    <fullName>Windfall_gain_payment__c</fullName>
    <description>Question: Amount that you are intending to pay</description>
    <label>Amount intending to pay</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>