force-app/main/default/objects/Annual_Review__c/fields/Windfall_gain_received__c.field-meta.xml
<CustomField>
    <fullName>Windfall_gain_received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: 
In the past 12 months, have you received a windfall gain of $10,000 or more, such as a gift, inheritance, or winnings?</description>
    <inlineHelpText>A Windfall Gain is a financial gain such as an inheritance or lotto win</inlineHelpText>
    <label>Windfall gain received</label>
    <type>Checkbox</type>
</CustomField>