force-app/main/default/objects/Annual_Review__c/recordTypes/Annual_Review.recordType-meta.xml
<RecordType>
    <fullName>Annual_Review</fullName>
    <active>true</active>
    <label>Annual Review</label>
</RecordType>