force-app/main/default/objects/Annual_Review__c/recordTypes/Annual_Review_ReadOnly.recordType-meta.xml
<RecordType>
    <fullName>Annual_Review_ReadOnly</fullName>
    <active>true</active>
    <label>Annual Review ReadOnly</label>
</RecordType>