force-app/main/default/objects/Annual_Review__c/validationRules/Cannot_create_when_property_inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_create_when_property_inactive</fullName>
    <active>true</active>
    <description>An annual review record cannot be created if the property is inactive</description>
    <errorConditionFormula>AND( ISNEW() , 
     NOT(ISBLANK( Property__c )) &amp;&amp; Property__r.IsActive__c = false
)</errorConditionFormula>
    <errorMessage>An annual review record cannot be created if the property is inactive</errorMessage>
</ValidationRule>