force-app/main/default/objects/Annual_Review__c/validationRules/Editor_is_Primary_Participant.validationRule-meta.xml
<ValidationRule>
    <fullName>Editor_is_Primary_Participant</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISNEW() = FALSE,

  OR(
    $User.ContactId = Participant_Two__r.PersonContactId,
    $User.ContactId = Participant_Three__r.PersonContactId, 
    $User.ContactId = Participant_Four__r.PersonContactId)
)</errorConditionFormula>
    <errorMessage>Only the Primary Participant can change the annual review record</errorMessage>
</ValidationRule>