force-app/main/default/objects/Annual_Review__c/validationRules/Lock_Annual_Review_After_Submission.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Annual_Review_After_Submission</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISCHANGED(BypassValidation__c)),
    NOT(ISNEW()),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    $Profile.Name &lt;&gt; &quot;Operations&quot;,
    NOT($Profile.Name = &apos;VHF Participant Community Plus User&apos;),
    RecordType.Name = &quot;Annual Review ReadOnly&quot;,
    OR(
        AND(
            $User.ContactId &lt;&gt; Primary_Participant__r.PersonContact.Id,
            NOT(
                OR(
                    AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Awaiting Verification&quot;), ISPICKVAL(Status__c,&quot;Submitted&quot;))
                )
            )
        ),
        AND(
            $User.ContactId = Primary_Participant__r.PersonContact.Id,
            NOT(
                OR(
                    AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Awaiting Submission&quot;), ISPICKVAL(Status__c,&quot;Awaiting Submission&quot;)),
                    AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Awaiting Submission&quot;), ISPICKVAL(Status__c,&quot;Awaiting Verification&quot;)),
                    AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Awaiting Verification&quot;), ISPICKVAL(Status__c,&quot;Awaiting Verification&quot;)),
                    AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Awaiting Submission&quot;), ISPICKVAL(Status__c,&quot;Submitted&quot;))
                )
            )
        )
    )
)</errorConditionFormula>
    <errorMessage>Annual Review records are locked after Submission. Please contact Admin to make changes.</errorMessage>
</ValidationRule>