force-app/main/default/objects/Annual_Review__c/validationRules/Lock_Cancelled_Annual_Review.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Cancelled_Annual_Review</fullName>
    <active>true</active>
    <description>Lock Annual Review records with the Status of Cancelled. Admins are still able to make changes.</description>
    <errorConditionFormula>AND( NOT(ISCHANGED(BypassValidation__c)), NOT($Profile.Name = &apos;VHF Participant Community Plus User&apos;), ISPICKVAL(Status__c, &apos;Cancelled&apos;), ISPICKVAL(PRIORVALUE(Status__c),&apos;Cancelled&apos;) ,NOT($Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
    <errorMessage>Cancelled Annual Review records are locked. Please contact Admin to make changes.</errorMessage>
</ValidationRule>