force-app/main/default/objects/Annual_Review__c/validationRules/Prevent_Edit_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_Owner</fullName>
    <active>false</active>
    <description>** Depreciated Do Not Use **

Prevents non admin users editing the Owner field on Annual Review records.</description>
    <errorConditionFormula>AND(
   OwnerId  &lt;&gt;  PRIORVALUE( OwnerId ),
   NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorMessage>You cannot change the Owner field on Annual Review records.</errorMessage>
</ValidationRule>