force-app/main/default/objects/Annual_Review__c/validationRules/Prevent_Edit_Primary_Participant.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_Primary_Participant</fullName>
    <active>true</active>
    <description>Prevents non admin users editing the Primary Participant field on Annual Review records.</description>
    <errorConditionFormula>AND(NOT(ISCHANGED(BypassValidation__c)),
   Primary_Participant__c  &lt;&gt;  PRIORVALUE(  Primary_Participant__c  ),
   NOT($Profile.Name = &quot;System Administrator&quot;), NOT($Profile.Name = &apos;VHF Participant Community Plus User&apos;)
)</errorConditionFormula>
    <errorMessage>You cannot change the Primary Participant field on Annual Review records.</errorMessage>
</ValidationRule>