force-app/main/default/objects/Annual_Review__c/validationRules/Prevent_updates_to_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_updates_to_Status</fullName>
    <active>true</active>
    <description>Prevent updates to the Status field depending on the Annual Review records current Status value.</description>
    <errorConditionFormula>AND(NOT(ISCHANGED(BypassValidation__c)), $Profile.Name = &apos;Operations&apos;,
OR(
AND(
 ISPICKVAL(PRIORVALUE(Status__c),&apos;Submitted&apos;), NOT(ISPICKVAL(Status__c,&apos;In Review&apos;) || ISPICKVAL(Status__c,&apos;Submitted&apos;) ||
ISPICKVAL(Status__c,&apos;Cancelled&apos;))
),
AND(
 ISPICKVAL(PRIORVALUE(Status__c),&apos;In Review&apos;), NOT(ISPICKVAL(Status__c,&apos;Completed&apos;) || ISPICKVAL(Status__c, &apos;Awaiting Submission&apos;) || ISPICKVAL(Status__c,&apos;In Review&apos;) ||
ISPICKVAL(Status__c,&apos;Cancelled&apos;)) 
),
AND(
 ISPICKVAL(PRIORVALUE(Status__c),&apos;Awaiting Submission&apos;), NOT(ISPICKVAL(Status__c, &apos;Awaiting Submission&apos;) || ISPICKVAL(Status__c, &apos;Completed&apos;) ||
ISPICKVAL(Status__c,&apos;Cancelled&apos;)) 
),
AND(
 ISPICKVAL(PRIORVALUE(Status__c),&apos;Awaiting Verification&apos;), NOT(ISPICKVAL(Status__c,&apos;Awaiting Verification&apos;) || ISPICKVAL(Status__c, &apos;Completed&apos;) ||
ISPICKVAL(Status__c,&apos;Cancelled&apos;)) 
),
AND(
 ISPICKVAL(PRIORVALUE(Status__c),&apos;Cancelled&apos;), NOT(ISPICKVAL(Status__c,&apos;Cancelled&apos;))
),
AND(
ISPICKVAL(PRIORVALUE(Status__c),&apos;Completed&apos;), NOT(ISPICKVAL(Status__c,&apos;Completed&apos;))
)
)
)</errorConditionFormula>
    <errorMessage>Cannot set that Status value</errorMessage>
</ValidationRule>