force-app/main/default/objects/Annual_Review__c/validationRules/Property_cant_update_by_participant.validationRule-meta.xml
<ValidationRule>
    <fullName>Property_cant_update_by_participant</fullName>
    <active>false</active>
    <errorConditionFormula>$Profile.Name = &apos;VHF Participant Community Plus User&apos; &amp;&amp; ISCHANGED( Property__c )</errorConditionFormula>
    <errorDisplayField>Property__c</errorDisplayField>
    <errorMessage>You don&apos;t have required privileges to update this field. Please contact SRO officer for further assistance.</errorMessage>
</ValidationRule>