force-app/main/default/objects/Annual_Review__c/validationRules/Require_Cancellation_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Cancellation_Reason</fullName>
    <active>true</active>
    <description>Cancellation Reason field must be filled before record status can be changed to Cancelled.</description>
    <errorConditionFormula>AND(NOT(ISCHANGED(BypassValidation__c)), NOT($Profile.Name = &apos;VHF Participant Community Plus User&apos;), ISPICKVAL(Status__c,&apos;Cancelled&apos;),  Cancellation_Reason__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Cancellation Reason field must be populated before Annual Review Status can be changed to Cancelled.</errorMessage>
</ValidationRule>