force-app/main/default/objects/Annual_Review__c/listViews/Annual_Review_submitted.listView-meta.xml
<ListView>
    <fullName>Annual_Review_submitted</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Primary_Participant__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Submitted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Annual Review submitted</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>