force-app/main/default/objects/Annual_Review__c/listViews/AR_awaiting_submission_verification.listView-meta.xml
<ListView>
    <fullName>AR_awaiting_submission_verification</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Primary_Participant__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Submitted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Submission,Awaiting Verification</value>
    </filters>
    <label>AR awaiting submission/verification</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>