force-app/main/default/objects/Annual_Review__c/listViews/My_Annual_Reviews.listView-meta.xml
<ListView>
    <fullName>My_Annual_Reviews</fullName>
    <columns>NAME</columns>
    <columns>Annual_review_period__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Annual Reviews</label>
</ListView>