force-app/main/default/objects/Annual_Review__c/listViews/My_Open_Annual_Reviews.listView-meta.xml
<ListView>
    <fullName>My_Open_Annual_Reviews</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Primary_Participant__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Submitted_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>My Open Annual Reviews</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>