force-app/main/default/objects/Annual_Review__c/listViews/VHF_Annual_Review_Queue_Annual_Review.listView-meta.xml
<ListView>
    <fullName>VHF_Annual_Review_Queue_Annual_Review</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>VHF Annual Review Queue</label>
    <queue>VHF_Annual_Review_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>